@@ -6,7 +6,7 @@ import pro.gravit.launcher.client.gui.impl.AbstractStage;
 public class ConsoleStage extends AbstractStage {
     public ConsoleStage(JavaFXApplication application) {
         super(application.newStage());
-        stage.setTitle(String.format("%s Launcher Console", application.config.projectName));
+        stage.setTitle("%s Launcher Console".formatted(application.config.projectName));
         stage.setResizable(false);
     }
 }
